--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "CuriosityBot-MD",
+"name": "NexusBot-MD",
 "version": "1.0.0", 
 "description": "WhatsApp Bot - Node.Js",
 "main": "index.js",
@@ -17,16 +17,16 @@
 "test": "node test.js",
 "test2": "nodemon index.js" },
     
-"homepage": "https://github.com/AzamiJs/CuriosityBot-MD",
+"homepage": "https://github.com/WOTCHITO/Nexus--bot-",
 "author": {
-"name": "Azami_dev" }, 
+"name": "Eder" }, 
     
 "repository": {
 "type": "git",
- "url": "git+https://github.com/AzamiJs/CuriosityBot-MD.git" },
+ "url": "git+https://github.com/WOTCHITO/Nexus--bot-.git" },
  
 "bugs": {
-"url": "https://github.com/AzamiJs/CuriosityBot-MD/issues" },
+"url": "https://github.com/WOTCHITO/Nexus--bot-/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
 "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys",
@@ -39,7 +39,7 @@
 "@xct007/frieren-scraper": "^0.0.2",
 "@tensorflow/tfjs": "^3.18.0",
 "acrcloud": "^1.4.0",
-"api-dylux": "^1.5.5",
+"api-dylux": "^1.5.5
 "awesome-phonenumber": "^2.68.0",
 "axios": "^1.3.4",
 "aptoide-scraper": "^1.0.1",
