--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 "@xct007/frieren-scraper": "^0.0.2",
 "@tensorflow/tfjs": "^3.18.0",
 "acrcloud": "^1.4.0",
-"api-dylux": "^1.5.5
+"api-dylux": "^1.5.5",
 "awesome-phonenumber": "^2.68.0",
 "axios": "^1.3.4",
 "aptoide-scraper": "^1.0.1",
